--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,15 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
+		<style>
+			:root {
+				font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+					Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+			}
+			body {
+				margin: 0;
+			}
+		</style>
 	</head>
 	<body>
 		<div id="svelte">%svelte.body%</div>
